updated html files and styling

--- a/WebVisualizations/comparisons.html
+++ b/WebVisualizations/comparisons.html
@@ -61,7 +61,7 @@
 
 <div class="container">
     <section class="row">
-        <div class="description-content">
+        <div class="information">
             <h1><strong class="header">Comparison:Latitude vs X</strong></h1>
             <hr>
             <p><strong> Click any plot to get an in-depth analysis.</strong></p>
