--- a/WebVisualizations/Landing.html
+++ b/WebVisualizations/Landing.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Cloudiness</title>
+    <title>Latitude</title>
 
     <!-- Use Bootstrap stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -57,17 +57,18 @@
       </div>
     </nav>
 
-<!--add information, visualizations and graphs -->
+<!-- add information, visualizations and graphs  -->
 
   <div class="container">
     <section class="row">
       <div class="col-lg-7 col-md-12">
           <div class="information">
-            <h1 class="header">Cloudiness</h1>
+            <h1 class="header">Summary: Latitude vs. X</h1>
             <hr>
-            <img src="https://github.com/Krhullsiek/Web-Design-Challenge/blob/main/WebVisualizations/Resources/assets/images/Fig3.png?raw=true" alt="Latitude vs. Cloudiness" id="landing2-png">
+            <img src="https://github.com/Krhullsiek/Web-Design-Challenge/blob/main/WebVisualizations/Resources/assets/images/Fig1.png?raw=true" alt="Latitude vs. Temperature" id="landing-png">
 
-            <p>We can see in this graph that there is no correlation between cloudiness and latitude.</p>
+            <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
+            <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
           </div>
         </div>
       <div class="col-lg-5 col-md-12">
